# datastate

./: .gitignore  Cargo.toml  README.md  README_CN.md  refactor_suggestions.md
src/: analysis_test_coverage.rs  components.md  components.rs  lib.md  lib.rs  marketing_sent.md  marketing_sent.rs
src/capability/: base_capability.md  base_capability.rs  mod.rs  plan_base_capability.md
src/capability_result/: capability_result.md  capability_result.rs  mod.rs
src/components/: base_entity.md  base_entity.rs  economic_manager.md  economic_manager.rs  lifecycle_manager.md  lifecycle_manager.rs
src/config/: config.md  config.rs  mod.rs
src/data_sync/: data_sync.md  data_sync.rs  data_sync_mysql.md  data_sync_mysql.rs  mod.rs  synclog.md  synclog.rs
src/dataaudit/: audit_log_state.md  audit_log_state.rs  audit_manager.md  audit_manager.rs  audit_perm_state.md  audit_perm_state.rs  data_audit.md  data_audit.rs  mod.rs
src/datamanage/: data_manage.md  data_manage.rs  mod.rs
src/datastate/: data_state.md  data_state.rs  data_state_mysql.md  data_state_mysql.rs  lovers_state.rs  mod.rs  taskqueue.rs  test.sh  testtb.md  testtb.rs
src/instance/: base_instance.md  base_instance.rs  mod.rs
src/localdb/: local_db.md  local_db.rs  mod.rs
src/mysql78/: compare_analysis.md  mod.rs  mysql78.md  mysql78.rs  sys_sql_state.md  sys_sql_state.rs  sys_warn_state.md  sys_warn_state.rs
src/query_builder/: mod.rs  query_builder.md  query_builder.rs
tests/: test_audit_log_count.rs  test_audit_permissions.rs  test_sqlite78_business.rs  test_synclog_mysql.rs  test_tb_sync.rs  test_tb_upload.rs
(+37 files in other folders)
