[package]
name = "datastate"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
crate-type = ["cdylib", "rlib"]

[dependencies]
base = { path = "../base" }
rusqlite = { version = "0.32", features = ["bundled"] }
mysql = "25"
serde = { version= "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
hostname = "0.4"
parking_lot = "0.12"
ureq = { version = "2.9", features = ["json"] }
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
pyo3 = { version= "0.22", features = ["extension-module"] }
md5 = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }