[package]
name = "datastate"
version = "0.1.0"
edition = "2021"

[lib]
name = "datastate"
crate-type = ["rlib"]

[dependencies]
base = { git = "https://github.com/www778878net/rustbase.git" }
rusqlite = { version = "0.32", features = ["bundled"] }
mysql = "25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1.19"
async-trait = "0.1"
md5 = "0.7"
prost = "0.13"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ontology = { path = "../ontology" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }